[tool.poetry]
name = "dvmn_lesson04"
version = "0.1.0"
description = ""
authors = ["Dmitry Plevkov <wwarne@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiofile = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
